Fix even rows in tklist on dark mode

--- a/src/tamarack.css
+++ b/src/tamarack.css
@@ -113,8 +113,8 @@ html {
         --tktoolbarbutton-active-fill: rgb(3, 61, 78);
         
         /* Misc */
-        --tk-transparent-border: rgba(192, 192, 192, 0.5);
-        --tk-even-child-fill: rgba(182, 182, 182, 0.07);
+        --tk-transparent-border: rgba(255, 255, 255, 0.45);
+        --tk-even-child-fill: rgba(255, 255, 255, 0.1);
 
         /* Images */
         --tkimg-transparent-fill: url("transparency-dark.png");
